--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,26 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+
+
+.brand-logo {
+  margin-left: 15px;
 }
 
-a {
-  color: #00B7FF;
+.card .card-content .card-title {
+  margin-bottom: 10px;
+}
+
+#search-row form {
+  padding-top: 20px;
+}
+
+.student-name {
+  position: relative;
+  top: -5px;
+}
+
+.collection-item form {
+  margin-top: -5px;
+}
+
+.navbar-wrapper {
+  color: red;
 }
