--- a/views/drivers/index.ejs
+++ b/views/drivers/index.ejs
@@ -32,5 +32,13 @@
           </div>
         </nav>
       </div>
+<ul>
+
+  <% standings.forEach(function(s) { %>
+    <li><%= s %></li>
+ <% })  %>
+</ul>
+
+      
       
 </body>
