--- a/views/teams/index.ejs
+++ b/views/teams/index.ejs
@@ -35,7 +35,6 @@
 <section class="row">
 <aside class="col s3">
   <% if (user) { %>
-
   <h3>User's Team</h3>
   <table>
     <thead>
@@ -58,7 +57,54 @@
     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
  <% } %>
 </aside>
-<main class="col s7">Main</main>
+<main class="col s9">
+
+  <hr>
+     <div>
+       <% if (driverData) { %>
+        <div class="row center">
+            <div class="col s4">
+              <h5>Season: <%= driverData.season %></h4>
+            </div>
+            <div class="col s4">
+                <h5>Circuit: <%= driverData.raceName %></h4>
+            </div>
+            <div class="col s4">
+              <h5>Round: <%= driverData.round %></h4>
+            </div>
+        </div>
+        <div class="row center">
+            <h5>Results</h5>
+            <table>
+              <thead>
+                <tr>
+                  <th>Position</th>
+                  <th>Driver</th>
+                  <th>Team</th>
+                  <th>Points</th>
+                </tr>
+              </thead>
+              <% driverData.Results.forEach(function(i) { %>
+                  <tr>
+                    <td><%= i.position %></td>
+                    <td><%= i.Driver.familyName %></td>
+                    <td><%= i.Constructor.name %></td>
+                    <td><%= i.points %></td>
+                  </tr>
+             <% }); %>
+            </table>
+
+        </div>
+         
+ 	    <% } else { %>
+ 	      <h3>
+ 	        No Data!
+ 	      </h3>
+ 	    <% } %>
+     </div>
+ 
+
+</main>
 </section>
 
 <footer class="page-footer #c62828 red darken-3">
