--- a/views/teams/index.ejs
+++ b/views/teams/index.ejs
@@ -43,7 +43,7 @@
       </tr>
     </thead>
     <tbody>
-      <% user.teams.forEach(function(t) { %>
+      <% teams.forEach(function(t) { %>
         <tr>
           <td><%= t.name %></td>
           <td><a class="waves-effect waves-light blue btn-small right" href="/teams/<%= t._id %>">Edit Team</a></td>
