add delete function

--- a/views/teams/newDriver.ejs
+++ b/views/teams/newDriver.ejs
@@ -40,7 +40,7 @@
   <div class="input-field col s12">
     <select name="name">
         <option value="" disabled selected>Choose your option</option>
-      <option value="<%= teamData[0].name %>"><%= teamData[0].name %></option>
+      <option value="<%= teamData[0].name %>"><%= driverData.Results[0].Driver.familyName %></option>
     </select>
   </div>
   <input type="submit" value="Add Driver">
