--- a/views/teams/index.ejs
+++ b/views/teams/index.ejs
@@ -36,6 +36,9 @@
 <aside class="col s3">
   <% if (user) { %>
   <h3>User's Team</h3>
+  <div>
+    <form action=""></form>
+  </div>
   <table>
     <thead>
       <tr>
@@ -48,15 +51,17 @@
           <td><%= t.name %></td>
           <td><%= t.nationality %></td>
           <td><a class="waves-effect waves-light blue btn-small right" href="/teams/<%= t._id %>">Edit Team</a></td>
+
          <td><form action="/teams/<%= t._id %>?_method=DELETE" method="POST">
             <button type="submit">X</button>
           </form></td>
+          
         </tr>
      <% }); %>
     </tbody>
   </table>
     <a href="/teams/new" id="addTeam" class="waves-effect waves-light blue btn">Add New Team</a>
-    <a href="/teams/newDriver" id="addDriver" class="waves-effect waves-light red btn">Add Driver</a>
+    
   <% } else { %>
 <h3>Log in to create team!</h3>
     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
