--- a/views/teams/update.ejs
+++ b/views/teams/update.ejs
@@ -32,13 +32,13 @@
       </div>  
 
 
- <h1>Add New Team!</h1>
+ <h1>Edit Team!</h1>
  
 
-  <form action="/teams" method="POST">
+  <form action="/teams/update/<%= t._id %>?_method=PUT" method="POST">
      <label>Team:</label>
      <input type="text" name="name">
-     <input type="submit" value="Create Team">
+     <input type="submit" value="Update">
  </form>
 
  
