add aside for stats

--- a/views/drivers/new.ejs
+++ b/views/drivers/new.ejs
@@ -31,20 +31,17 @@
         </nav>
       </div>  
 
-  <section>
-    <h3>Stats</h3>
+
+
+      <h1>Add New Driver!</h1>
+ 
+
+      <form action="/teams" method="POST">
+         <label>Team:</label>
+         <input type="text" name="familyName">
+         <input type="submit" value="Create Team">
+     </form>
     
-  </section>
-
-
-   <a href="/teams">Back</a>
-<br><br>
-
-     
-
-   <br><br>
-
-
-
+</div>
 </body>
 </html>
