--- a/views/teams/edit.ejs
+++ b/views/teams/edit.ejs
@@ -6,7 +6,30 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
    <!-- Google Icon Fonts used by Materialize -->
- 
+   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+   <!-- Materialize CSS Framework -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+   <link rel="stylesheet" href="stylesheets/style.css" />
+   <!-- JavaScript for Materialize -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+</head>
+<body>
+  <div class="navbar-fixed">
+      <nav>
+        <div class="nav-wrapper #c62828 red darken-3">
+          <a href="" class="brand-logo left">F1 Midfield Fantasy</a>
+          <ul class="right">
+            <li>
+              <% if (user) { %>
+                <a href="/logout"><>Log Out</a>
+                <% } else { %>
+                  <a href="/auth/google"><i class="material-icons left">vpn_key</i>Login with Google</a>
+                  <% } %>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>  
 
 
  <h1>Change Name</h1>
