--- a/views/teams/index.ejs
+++ b/views/teams/index.ejs
@@ -35,7 +35,7 @@
 <section class="row">
 <aside class="col s3">
   <% if (user) { %>
-  <h3>Wellcome <%= user.name %></h3>
+  <h3>Welcome <%= user.name %></h3>
   <div><a href="/teams/<%= user._id %>/edit">Change Name</a></div>
   
   <table>
@@ -49,7 +49,7 @@
         <tr>
           <td><%= t.name %></td>
           <td><%= t.nationality %></td>
-          <td><a class="waves-effect waves-light blue btn-small right" href="/teams/<%= t._id %>">Edit Team</a></td>
+          <td><a class="waves-effect waves-light blue btn-small right" href="/teams/<%= t._id %>">See Stats</a></td>
 
          <td><form action="/teams/<%= t._id %>?_method=DELETE" method="POST">
             <button type="submit">X</button>
@@ -62,13 +62,37 @@
     </tbody>
   </table>
     <a href="/teams/new" id="addTeam" class="waves-effect waves-light blue btn">Add New Team</a>
+
+    <br><br>
+
+    
+        <table>
+          <thead>
+            <tr>
+              <th>Drivers</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% user.drivers.forEach(function(d) { %>
+              <tr>
+                <td><%= d.familyName %></td>
+                <td><%= t.givenName %></td>
+                <td><a href="/teams/<%= d._id %>">See Stats</a></td>
+              </tr>
+      
+           <% }); %>
+          </tbody>
+        </table>
+        <a href="/drivers/new" id="addDriver" class="waves-effect waves-light blue btn">Add Driver</a>
+
+
     
   <% } else { %>
-<h3>Log in to create team!</h3>
+<h3>Log in to add favorites</h3>
     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
  <% } %>
 </aside>
-<main class="col s9">
+<main class="col s6">
 
   <hr>
      <div>
@@ -116,7 +140,18 @@
  
 
 </main>
+<aside>
+<% if (user) { %>
+
+  <% } else { %>
+    <h3>More Stats</h3>
+    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
+    <% } %>
+  
+</aside>
 </section>
+
+
 
 <footer class="page-footer #c62828 red darken-3">
   <div class="container">
