--- a/views/teams/show.ejs
+++ b/views/teams/show.ejs
@@ -33,8 +33,26 @@
 
   <section>
     <h3>Stats</h3>
+
+    <table>
+      <thead>
+        <tr>
+          <th>Postition</th>
+          <th>Points</th>
+          <th>Wins</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>  </td>
+        </tr>
+      </tbody>
+      
+    </table>
     
   </section>
+
+
 
 
    <a href="/teams">Back</a>
