--- a/views/teams/index.ejs
+++ b/views/teams/index.ejs
@@ -52,7 +52,7 @@
           <td><a class="waves-effect waves-light blue btn-small right" href="/teams/<%= t._id %>">See Stats</a></td>
 
          <td><form action="/teams/<%= t._id %>?_method=DELETE" method="POST">
-            <button type="submit">X</button>
+            <button class="waves-effect waves-light btn-floating scale-transition red right" type="submit">X</button>
           </form></td>
         
           
@@ -76,8 +76,11 @@
             <% user.drivers.forEach(function(d) { %>
               <tr>
                 <td><%= d.familyName %></td>
-                <td><%= t.givenName %></td>
-                <td><a href="/teams/<%= d._id %>">See Stats</a></td>
+                <td><%= d.givenName %></td>
+                <td><a class="waves-effect waves-light blue btn-small right" href="/teams/<%= d._id %>/drivers">See Stats</a></td>
+                <td><form action="/teams/<%= d._id %>/drivers?_method=DELETE" method="POST">
+                  <button class="waves-effect waves-light btn-floating scale-transition red right" type="submit">X</button>
+                </form></td>
               </tr>
       
            <% }); %>
