--- a/views/teams/new.ejs
+++ b/views/teams/new.ejs
@@ -30,7 +30,7 @@
           </div>
         </nav>
       </div>  
-
+<div class="container">
 
  <h1>Add New Team!</h1>
  
@@ -38,7 +38,7 @@
   <form action="/teams" method="POST">
      <label>Team:</label>
      <input type="text" name="name">
-     <input type="submit" value="Create Team">
+     <input class="waves-effect waves-light blue btn-small" type="submit" value="Create Team">
  </form>
 
  
