--- a/views/teams/edit.ejs
+++ b/views/teams/edit.ejs
@@ -17,7 +17,7 @@
   <div class="navbar-fixed">
       <nav>
         <div class="nav-wrapper #c62828 red darken-3">
-          <a href="" class="brand-logo left">F1 Midfield Fantasy</a>
+          <a href="" class="brand-logo left">F1 Tracker</a>
           <ul class="right">
             <li>
               <% if (user) { %>
