--- a/views/drivers/new.ejs
+++ b/views/drivers/new.ejs
@@ -17,7 +17,7 @@
     <div class="navbar-fixed">
         <nav>
           <div class="nav-wrapper #c62828 red darken-3">
-            <a href="" class="brand-logo left">F1 Midfield Fantasy</a>
+            <a href="" class="brand-logo left">F1 Tracker</a>
             <ul class="right">
               <li>
                 <% if (user) { %>
@@ -39,9 +39,9 @@
    
   
         <form action="/teams/drivers" method="POST">
-           <label>Team:</label>
+           <label>Driver:</label>
            <input type="text" name="familyName">
-           <input class="waves-effect waves-light blue btn-small" type="submit" value="Create Team">
+           <input class="waves-effect waves-light blue btn-small" type="submit" value="Create Driver">
        </form>
       
   </div>
