--- a/views/teams/show.ejs
+++ b/views/teams/show.ejs
@@ -44,7 +44,7 @@
       </thead>
       <tbody>
         <tr>
-          <td>  </td>
+          <td><%= teamsdata. %>.<%= asdfsdf>   </td>
         </tr>
       </tbody>
       
