updated show and create controllers

--- a/views/teams/index.ejs
+++ b/views/teams/index.ejs
@@ -35,9 +35,11 @@
 <section class="row">
 <aside class="col s3">
   <% if (user) { %>
+    
   <h3>Welcome <%= user.name %></h3>
   <div><a href="/teams/<%= user._id %>/edit">Change Name</a></div>
-  
+  <div class="card hoverable">
+      <div class="card-content">
   <table>
     <thead>
       <tr>
@@ -62,10 +64,13 @@
     </tbody>
   </table>
     <a href="/teams/new" id="addTeam" class="waves-effect waves-light blue btn">Add New Team</a>
+    </div>
+    </div>
 
     <br><br>
 
-    
+    <div class="card hoverable">
+        <div class="card-content">
         <table>
           <thead>
             <tr>
@@ -87,20 +92,25 @@
           </tbody>
         </table>
         <a href="/drivers/new" id="addDriver" class="waves-effect waves-light blue btn">Add Driver</a>
+        </div>
+    </div>
 
 
     
   <% } else { %>
-<h3>Log in to add favorites</h3>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
+<div class="container">
+
+  <h3>Log in to add favorites</h3>
+      <h5>F1 tracker is an app that allows the user to keep track of their selected teams and drivers that compete in the Formula 1 World Championship. The user is able to select and add teams/drivers to their profile that is created when logged in. The user is then able to see live updates of each teams/drivers stats after every race. The user is also able to remove teams/drivers from their profile.</h5>
+</div>    
  <% } %>
 </aside>
-<main class="col s6">
+<main class="col s9 center">
 
   
-     <div>
+     <div class="container">
        <% if (driverData) { %>
-        <div class="row center #ffe57f amber accent-1">
+        <div class="row center">
             <div class="col s4">
               <h5>Season: <%= driverData.season %></h4>
             </div>
@@ -112,6 +122,7 @@
             </div>
         </div>
         <div class="row center">
+
             <h5>Results</h5>
             <table class="striped">
               <thead>
@@ -147,19 +158,7 @@
  
 
 </main>
-<aside class="center">
-<% if (user) { %>
-  <h3>Top 3 drivers stats</h3>
-  <table>
 
-  </table>
-
-  <% } else { %>
-    <h3>More Stats</h3>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
-    <% } %>
-  
-</aside>
 </section>
 
 
