--- a/views/teams/show.ejs
+++ b/views/teams/show.ejs
@@ -1,68 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-   <!-- Google Icon Fonts used by Materialize -->
-   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-   <!-- Materialize CSS Framework -->
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-   <link rel="stylesheet" href="stylesheets/style.css" />
-   <!-- JavaScript for Materialize -->
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+    <!-- Google Icon Fonts used by Materialize -->
+    <link
+      href="http://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <!-- Materialize CSS Framework -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <link rel="stylesheet" href="stylesheets/style.css" />
+    <!-- JavaScript for Materialize -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  </head>
+  <body>
     <div class="navbar-fixed">
-        <nav>
-          <div class="nav-wrapper #c62828 red darken-3">
-            <a href="" class="brand-logo left">F1 Tracker</a>
-            <ul class="right">
-              <li>
-                <% if (user) { %>
-                  <a href="/logout"><>Log Out</a>
-                  <% } else { %>
-                    <a href="/auth/google"><i class="material-icons left">vpn_key</i>Login with Google</a>
-                    <% } %>
-              </li>
-            </ul>
-          </div>
-        </nav>
-      </div>  
+      <nav>
+        <div class="nav-wrapper #c62828 red darken-3">
+          <a href="" class="brand-logo left">F1 Tracker</a>
+          <ul class="right">
+            <li>
+              <% if (user) { %>
+              <a href="/logout"><>Log Out</a>
+              <% } else { %>
+              <a href="/auth/google"
+                ><i class="material-icons left">vpn_key</i>Login with Google</a
+              >
+              <% } %>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
 
-  <section class="container">
-    <h3>Stats</h3>
+    <section class="container">
+      <h3>Stats</h3>
+      <div><%= user.teams.name %></div>
+    </section>
 
-    <table>
-      <thead>
-        <tr>
-          <th>Postition</th>
-          <th>Points</th>
-          <th>Wins</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td><%= teamsdata. %>.<%= asdfsdf>   </td>
-        </tr>
-      </tbody>
-      
-    </table>
-    
-  </section>
+    <a href="/teams">Back</a>
+    <br /><br />
 
-
-
-
-   <a href="/teams">Back</a>
-<br><br>
-
-     
-
-   <br><br>
-
-
-
-</body>
+    <br /><br />
+  </body>
 </html>
